methods.basics.MethodsDogHouse.scala.error
Compilation error:
MethodsDogHouse:3: error: '<-' expected but ')' found.
for(x -> 1 to 2 ){
                ^MethodsDogHouse:11: error: illegal start of simple expression
  }}
   ^MethodsDogHouse:16: error: expected start of definition
	override def run() {
                 ^MethodsDogHouse:47: error: Unmatched closing brace '}' ignored here
}
^